# ZipFile

./: AdaptiveHuffmanCoder.cpp  AdaptiveHuffmanCoder.h  AdapviteHaffmanCoder.cpp  AdapviteHaffmanCoder.h  BitBuffer.cpp  BitBuffer.h  ByteWriter.cpp  ByteWriter.h  CMakeLists.txt  Coder.cpp  Coder.h  Node.h  main.cpp
coder/: AdaptiveHuffmanCoder.cpp  AdaptiveHuffmanCoder.h  BitBuffer.cpp  BitBuffer.h  ByteWriter.cpp  ByteWriter.h  Node.cpp  Node.h
gui/: MainWindow.cpp  MainWindow.h
